--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # Ignore bundler config.
 /.bundle
+coverage
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -16,7 +17,7 @@
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
-
+/coverage/*
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
